SparkLauncher: Update default workspace
Squash of commits 9eeb786 and c183526.
Includes:

Author: Joey <joey@lineageos.org>
Date:   Fri Nov 1 11:56:19 2019 +0100

    Update default workspace

    Change-Id: I852edb6dda3e2030f97eb244ee35c1a647366901
    Signed-off-by: Joey <joey@lineageos.org>

Author: Arne Coucheron <arco68@gmail.com>
Date:   Sat Jan 11 01:57:25 2020 +0100

    Trebuchet: Replace LockClock widget with DeskClock

    Change-Id: Ic958dbabcd18ee02cbd8b7ea2513356d5a2e90de

Author: Bruno Martins <bgcngm@gmail.com>
Date:   Thu Dec 3 16:07:35 2020 +0000

    Trebuchet: Update GMS packages in the default workspaces

    Google Play Music is dead. Parter GMS has been updated to reflect
    this change, so apply it here as well.

    Change-Id: I13ad48964d826413e825fabb3aa8f9316ca2594d

Author: Bruno Martins <bgcngm@gmail.com>
Date:   Thu Dec 3 16:44:59 2020 +0000

    Trebuchet: Move Duo into Google folder as per GMS sample integration

    Change-Id: I588dd9092a2804ec197f6e0735f9f0bc43a0122f

Change-Id: I0ed2e193c8acbe52644412be82e906eab0cb5e30

--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -22,4 +22,7 @@
     <!-- Application name -->
     <string name="spark_app_name" translatable="false">SparkLauncher</string>
 
+    <!-- Folder titles -->
+    <string name="google_folder_title" translatable="false">Google</string>
+
 </resources>
