--- a/res/values/spark_colors.xml
+++ b/res/values/spark_colors.xml
@@ -16,4 +16,7 @@
 -->
 <resources>
     <color name="disabled_text_color">#66000000</color> <!-- 38% black -->
+    
+    <!-- Appseat -->
+    <color name="appseat_color">#50D9DADB</color>
 </resources>
