Launcher3: Introduce memory info in overview
This is convenient for monitoring device status and many OEMs have their design for this. It's time to have our own one.

[PacMM79: Adapt to crdroid launcher. Update quickstep overview actions dimens.xml]

Change-Id: I890c86c798055b1964506d9a4df1cef386562160
Signed-off-by: LibXZR <i@xzr.moe>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -153,4 +153,7 @@
     
     <!-- Background blur -->
     <string name="background_blur_title">Recents background blur</string>
+    
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s Available | %2$s Total</string>
 </resources>
