--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -83,4 +83,7 @@
 
     <!-- Recents -->
     <string name="action_lens">Lens</string>
+
+    <!-- Homescreen Statusbar -->
+    <string name="show_statusbar_title">Show Statusbar</string>
 </resources>
