--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -58,8 +58,10 @@
     <string name="google_folder_title" translatable="false">Google</string>
 
     <!-- Hide labels -->
-    <string name="desktop_show_labels">Show icon labels on desktop</string>
-    <string name="drawer_show_labels">Show icon labels in drawer</string>
+    <string name="title_desktop_labels">Desktop labels</string>
+    <string name="summary_desktop_labels">Show icon labels on desktop</string>
+    <string name="title_drawer_labels">Drawer labels</string>
+    <string name="summary_drawer_labels">Show icon labels in drawer</string>
 
     <!-- Icon size -->
     <string name="icon_size_title">Icon size</string>
