--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -59,7 +59,7 @@
 
     <!-- Hide labels -->
     <string name="title_desktop_labels">Desktop labels</string>
-    <string name="summary_desktop_labels">Show icon labels on desktop</string>
+    <string name="summary_desktop_labels">Show icon labels on Home screen</string>
     <string name="title_drawer_labels">Drawer labels</string>
     <string name="summary_drawer_labels">Show icon labels in drawer</string>
 
@@ -94,7 +94,7 @@
 
     <!-- Suggestions -->
     <string name="suggestion_pref_screen_title">Suggestions</string>
-    <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
+    <string name="suggestion_pref_screen_desc">For All Apps and Home screen suggestions</string>
 
     <!-- Force stop shortcut -->
     <string name="recent_task_force_stop_app">Force stop</string>
@@ -103,6 +103,10 @@
     <!-- All apps themed icons -->
     <string name="pref_themed_icons_title">All apps themed icons</string>
     <string name="pref_themed_icons_summary">Toggle to switch between homescreen dock and all apps themed icons</string>
+
+    <!-- Drawer themed icons -->
+    <string name="pref_themed_icons_title">Drawer themed icons</string>
+    <string name="pref_themed_icons_summary">Apply themed icons in drawer</string>
 
     <!-- Icon pack -->
     <string name="icon_pack_title">Icon pack</string>
@@ -128,7 +132,8 @@
     <string name="pref_allow_phone_overview_grid_desc">More recent apps in overview</string>
 
     <!-- Show top shadow -->
-    <string name="show_top_shadow">Show top shadow</string>
+    <string name="show_top_shadow_title">Top shadow</string>
+    <string name="show_top_shadow_summary">Show shadow on the top of Home screen</string>
 
     <!-- Scroll Vibration -->
     <string name="pref_scroll_vibration_title">Scroll Vibration</string>
