--- a/res/values/spark_colors.xml
+++ b/res/values/spark_colors.xml
@@ -19,4 +19,8 @@
     
     <!-- Appseat -->
     <color name="appseat_color">#50D9DADB</color>
+    
+    <color name="user_crd_bg">@*android:color/system_neutral1_0</color>
+    <color name="op_control_text_color_primary">#d8000000</color>
+    <color name="op_control_text_color_secondary">#66000000</color>
 </resources>
