Launcher3: Add recents and app drawer opacity customization
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: minaripenguin <alexfinhart@gmail.com>

--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -151,4 +151,7 @@
 
     <!-- Row Height -->
     <string name="row_height_title">Row height</string>
+
+    <!-- Background opacity -->
+    <string name="background_opacity_title">Background opacity</string>
 </resources>
