--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -40,6 +40,7 @@
     <string name="general_category_title">General</string>
     <string name="interface_category_title">Interface</string>
     <string name="search_bar_category_title">Search bar</string>
+    <string name="actions_category_title">Quick actions</string>
 
     <!-- Settings -->
 
@@ -158,4 +159,9 @@
     <!-- Background blur -->
     <string name="background_blur_title">Background blur depth</string>
     <string name="background_blur_desc">Set blur depth level for recents and app drawer</string>
+
+    <!-- Recents icons -->
+    <string name="recents_screenshot_title">Screenshot</string>
+    <string name="recents_clear_all_title">Clear all</string>
+    <string name="recents_lens_title">Lens</string>
 </resources>
