SparkLauncher: Add an option to customize blur radius
* revert back to px
* set max blur radius to 175px

Signed-off-by: minaripenguin <alexfinhart@gmail.com>

--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -154,4 +154,7 @@
 
     <!-- Background opacity -->
     <string name="background_opacity_title">Background opacity</string>
+    
+    <!-- Background blur -->
+    <string name="background_blur_title">Recents background blur</string>
 </resources>
