Launcher3: Add an option to customize blur radius
* Set max blur radius to 175px

[@neobuddy89: Add some clean up.]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/launcher_recents_preferences.xml
+++ b/res/xml/launcher_recents_preferences.xml
@@ -33,7 +33,7 @@
             android:title="@string/pref_allow_phone_overview_grid"
             android:summary="@string/pref_allow_phone_overview_grid_desc" />
 
-        <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+        <com.spark.support.preferences.CustomSeekBarPreference
             android:key="pref_recents_opacity"
             android:title="@string/background_opacity_title"
             android:persistent="true"
