Icons: Import gamespace themed icon
source: https://fonts.google.com/icons?icon.style=Outlined&icon.set=Material+Icons&icon.query=game

Signed-off-by: minaripenguin <alexfinhart@gmail.com>

--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -2433,4 +2433,8 @@
     <icon
         drawable="@drawable/themed_icon_tinkoff"
         package="ru.tinkoff.sme" />
+    <icon
+        drawable="@drawable/ic_gamespace"
+        name="Game Space"
+        package="io.chaldeaprjkt.gamespace" />
 </icons>
