SparkLauncher: Use our prefs from vendor support

--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -42,7 +42,7 @@
         settings:units="%"
         android:defaultValue="100" />
 
-    <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+    <com.spark.support.preferences.CustomSeekBarPreference
         android:key="pref_app_drawer_opacity"
         android:title="@string/background_opacity_title"
         android:persistent="true"
