SushiLauncher:  Add toggle to show/hide app drawer search bar
Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>
Signed-off-by: minaripenguin <alexfinhart@gmail.com>

--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -27,6 +27,11 @@
         android:persistent="true" />
 
     <SwitchPreference
+        android:key="pref_drawer_searchbar"
+        android:title="@string/drawer_searchbar_title"
+        android:defaultValue="true" />
+
+    <SwitchPreference
         android:key="pref_drawer_show_labels"
         android:title="@string/title_drawer_labels"
         android:summary="@string/summary_drawer_labels"
@@ -50,5 +55,4 @@
         android:min="0"
         settings:units="%"
         android:defaultValue="80" />
-
 </androidx.preference.PreferenceScreen>
