--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -164,4 +164,7 @@
     <string name="recents_screenshot_title">Screenshot</string>
     <string name="recents_clear_all_title">Clear all</string>
     <string name="recents_lens_title">Lens</string>
+
+    <!-- App drawer searchbar -->
+    <string name="drawer_searchbar_title">Enable/Disable app drawer searchbar</string>
 </resources>
