SushiLauncher: Add option for forced white app label
* for low opacity situations on light mode etc.

spkal01: Improve strings
Signed-off-by: minaripenguin <alexfinhart@gmail.com>

--- a/res/values/spark_strings.xml
+++ b/res/values/spark_strings.xml
@@ -167,4 +167,7 @@
 
     <!-- App drawer searchbar -->
     <string name="drawer_searchbar_title">Enable/Disable app drawer searchbar</string>
+
+    <!-- App label Color -->
+    <string name="drawer_white_labels">Force white labels</string>
 </resources>
