Revert "SparkLauncher: Add an option to customize blur radius"
This reverts commit 64df16e60113f8cf4269d58e0869476d184f49e3.

--- a/res/xml/launcher_recents_preferences.xml
+++ b/res/xml/launcher_recents_preferences.xml
@@ -33,7 +33,7 @@
             android:title="@string/pref_allow_phone_overview_grid"
             android:summary="@string/pref_allow_phone_overview_grid_desc" />
 
-        <com.spark.support.preferences.CustomSeekBarPreference
+        <com.android.launcher3.settings.preferences.CustomSeekBarPreference
             android:key="pref_recents_opacity"
             android:title="@string/background_opacity_title"
             android:persistent="true"
@@ -41,15 +41,6 @@
             android:min="0"
             settings:units="%"
             android:defaultValue="80" />
-
-        <com.spark.support.preferences.CustomSeekBarPreference
-            android:key="pref_recents_blur"
-            android:title="@string/background_blur_title"
-            android:persistent="true"
-            android:max="175"
-            android:min="0"
-            settings:units="px"
-            android:defaultValue="23" />
     </PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
